--- a/src/main/res/layout/activity_display_workout.xml
+++ b/src/main/res/layout/activity_display_workout.xml
@@ -17,7 +17,7 @@
         android:ems="10"
         android:hint="e.g. 13"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
+        app:layout_constraintBottom_toTopOf="@+id/displayWorkout_EndWorkoutCheckBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayWorkout_movement2RepOutTarget"
         app:layout_constraintVertical_bias="0.035" />
@@ -175,13 +175,13 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="36dp"
         android:text="Reps on last set:"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
+        app:layout_constraintBottom_toTopOf="@+id/displayWorkout_EndWorkoutCheckBox"
         app:layout_constraintEnd_toStartOf="@+id/displayWorkout_mov2_RepsOnLastSetInput"
         app:layout_constraintTop_toBottomOf="@+id/DisplayWorkout_movement2Weight"
         app:layout_constraintVertical_bias="0.029" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/displayWorkout_EndWorkoutCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="84dp"
